--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
-hogehoge2
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+<meta charset="UTF-8">
+<title>某大学トップページ解析</title>
+<link rel='stylesheet' href='css/styles.css' type='text/css'>
+<meta name="description" content="某大学の公式webサイトのトップページです。大学概要、学部学科・大学院、学生生活、進路・就職、国際交流、研究･社会貢献などの情報や、入試・受験案内、展覧会情報などを掲載しています。">
+<script type='text/javascript' src='jquery/jquery.js'></script>
+</head>
+<body id="xxx_ac_jp" class="home page-template-default page page-id-36381">
+<div class="container"></div>
+	<header>
+		<a></a>
+		<div class="header__group">
+			<a></a>
+			<ul><li></li></ul>
+			<ul><li></li></ul>
+			<ul><li></li></ul>
+		</div>
+		<nav><ul><li></li></ul></nav>
+		<form></form>
+	</header>
+<div id="content">
+	<div class="container">
+		<p class="carousel__title"></p>
+		<p class="carousel__visual"></p>
+		<p class="carousel__body"></p>
+	</div>
+	<div class="container">
+		<h2></h2>
+		<div class="special__item"></div>
+		<div class="special__item"></div>
+		<div class="special__item"></div>
+		<div class="special__item"></div>
+		<div class="special__item"></div>
+		<div class="special__item"></div>
+	</div>
+	<div class="container">
+		<main>
+			<div class="row">
+				<div class="col-sm-4 col-md-4 col-lg-4"></div>
+				<div class="col-sm-4 col-md-4 col-lg-4"></div>
+				<div class="col-sm-4 col-md-4 col-lg-4"></div>
+			</div>
+			<div class="row_dense">
+				<div class="col-sm-6 col-md-6 col-lg-6"></div>
+				<div class="col-sm-3 col-md-3 col-lg-3"></div>
+				<div class="col-sm-3 col-md-3 col-lg-3"></div>
+			</div>			
+		</main>
+	</div>
+</div>
+<div class="container">
+	<nav></nav>
+</div>
+<div class="container">
+	<footer>
+		<ul>
+			<li></li>
+		</ul>
+		<h2><ul><li></li></ul></h2>
+		<h2><dl><dt><dd></dd></dt></dl></h2>
+		<h2><ul><li></li></ul></h2>
+		<p><small></small><img src="xxx.png"></p>
+	</footer>
+</div>
+</body>
+</html>
